add english page

--- a/english_page.html
+++ b/english_page.html
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link active"  href="#home">Home</a>
-            <a class="nav-link" href="#aboutus">O mnie</a>
-            <a class="nav-link" href="#projekty">Projekty</a>
-            <a class="nav-link" href="#contact">Kontakt</a>
+            <a class="nav-link" href="#aboutus">About Me</a>
+            <a class="nav-link" href="#projekty">Projects</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </div>
           <div>
-            <a class="nav-link" href="english_page.html">
-                <span class="flag-icon flag-icon-gb"></span> <!-- GB is the country code for Great Britain (English) -->
+            <a class="nav-link" href="index.html">
+                <span class="flag-icon flag-icon-pl"></span> <!-- PL is the country code for Poland (Polish) -->
             </a>
           </div>
         </div>
@@ -38,7 +38,7 @@
         justify-content-center align-items-center text-light text-center">
             <p class="display-1">Michał Żołyniak</p>
             <br>
-            <a href="#aboutus" class="btn btn-outline-light">poznaj mnie</a>
+            <a href="#aboutus" class="btn btn-outline-light">let me introduce myself</a>
             <div class="hero-shadow"></div>
         </div>
     </section>
@@ -48,78 +48,77 @@
             <div class="row text-center">
               <div class="col-12 col-md-6 col-lg-3">
                 <div class="aboutus-box m-3 p-4 p-lg-5 d-flex flex-column h-100 border text-dark">
-                  <h3>Programowanie</h3>
+                  <h3>Programming</h3>
                   <i class="bi bi-hdd-stack-fill aboutus-icon"></i>
-                  <p> Pracuje jako developer VBA. Uwielbiam poszerzać swoją wiedze programistyczną.
-                      Ta strona jest tego owocem. </p>
+                  <p> I work as a VBA developer. I love expanding my programming knowlegde.
+                      This page is a result of that.</p>
                 </div>
               </div>
               <div class="col-12 col-md-6 col-lg-3">
                 <div class="aboutus-box m-3 p-4 p-lg-5 d-flex flex-column h-100 border text-light bg-dark">
-                  <h3>Bieganie</h3>
+                  <h3>Running</h3>
                   <i class="bi bi-arrow-repeat aboutus-icon"></i>
-                  <p>Moją pasją jest bieganie. Moim największym sukcesem
-                      jest do tej pory ukończenie maratonu i półmaratonu.
+                  <p>Running is my passion. I love the thrill of pushing my limits
+                      and challenging myself.
                   </p>
                 </div>
               </div>
               <div class="col-12 col-md-6 col-lg-3">
                 <div class="aboutus-box m-3 p-4 p-lg-5 d-flex flex-column h-100 border text-dark">
-                  <h3>Inwestowanie</h3>
+                  <h3>Investing</h3>
                   <i class="bi bi-currency-dollar aboutus-icon"></i>
-                  <p>Interesuje się krypto walutami
-                      i rynkiem akcji.
-                      Jestem wyznawcą analizy fundamentalnej.
+                  <p>I am a follower of fundamental analysis in investing. I believe in
+                      understanding the underlying value of investments.
                   </p>
                 </div>
               </div>
               <div class="col-12 col-md-6 col-lg-3">
                 <div class="aboutus-box m-3 p-4 p-lg-5 d-flex flex-column h-100 border text-light bg-dark">
-                  <h3>Góry</h3>
+                  <h3>Mountains</h3>
                   <i class="bi bi-caret-up-fill aboutus-icon"></i>
-                  <p>Lubię spędzać czas w polskich górach szczególnie w Beskidach.
-                      Jestem zdobywcą korony gór polskich.</p>
+                  <p>I am a conqueror of the Polish mountains' crown. I love hiking and
+                      exploring the beauty of nature.</p>
                 </div>
               </div>
             </div>
           </div>
             <div class="container py-5">
-                <p class="display-3 text-uppercase orange-color text-center mb-4">Czym się wyróżniam?</p>
+                <p class="display-3 text-uppercase orange-color text-center mb-4">What makes me different?</p>
                 <div class="accordion py-5" id="accordionExample">
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
                       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Konsekwencja w działaniu
+                        Consistency in action
                       </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        Jeżeli na czymś mi zależy lub mam wyznaczony cel, konsekwentnie małymi krokami dążę do tego.
-                        Tak właśnie przygotowałem się do maratonu, zdobyłem koronę gór polskich a także uczę się kolejnych technologii programistycznych.
+                        If I care about something or have a set goal, I consistently take small steps towards it.
+                        That's how I prepared for a marathon, conquered the highest peaks in Poland, and continue to learn new programming technologies
                       </div>
                     </div>
                   </div>
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Chęć rozwoju
+                        Desire for development
                       </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                            Nauczyłem się samodzielnie VBA, PYTHONA, HTML, CSS, podstaw JS. W planach mam kolejne technologie.
+                           I have learnt VBA, PYTHON, HTML, CSS and JS. I plan to learn new technologies in the future.
                       </div>
                     </div>
                   </div>
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Ciekawość
+                        Curiosity
                       </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        Lubię uczyć się nowych rzeczy, a także poszerzać posiadaną wiedze.
+                        I enjoy learning new things and expanding my existing knowledge.
                       </div>
                     </div>
                   </div>
@@ -128,18 +127,20 @@
         </section>
         <section id="projekty" class="team py-5">
             <div class="container py-5 text-center">
-                <p class="display-3 text-uppercase orange-color mb-0">moje projekty</p>
+                <p class="display-3 text-uppercase orange-color mb-0">My Projects</p>
                 <p class="py-5">
-                    Poniżej lista projektów programistycznych, które przygotowałem w ramach nauki programowania.
-                    Cześć z nich jest do wglądu w moim repozytorium na GitHub.
+                    Below is a list of programming projects that I have prepared as part of my programming learning journey.
+                    Some of them are available for viewing in my GitHub repository.
                 </p>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 g-4 ">
                   <div class="col">
                     <div class="card h-100">
                       <img src="./img/photo_gallery_3.jpg" class="card-img-top" alt="photo_gallery">
                       <div class="card-body">
-                        <h4 class="card-title">Galeria zdjęć</h4>
-                        <p class="card-text">Apliakcja pozwalająca dodawać zdjęcia do galerii. Projekt został przygotowany w oparciu o Pythona, Flaska, HTML, CSS, Boostrap, JavaScript. </p>
+                        <h4 class="card-title">Photo Gallery</h4>
+                        <p class="card-text">An application that allows you to add photos to a gallery.
+                            The project has been developed using Python, Flask, HTML, CSS, Bootstrap, and JavaScript.
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -147,9 +148,8 @@
                     <div class="card h-100">
                       <img src="./img/hangman_2.jpg" class="card-img-top" alt="Hangman">
                       <div class="card-body">
-                        <h5 class="card-title">Wisielec</h5>
-                        <p class="card-text">Interaktywna gra w wisielca.
-                            Projekt został przygotowany w technologii Python.
+                        <h5 class="card-title">Hangman</h5>
+                        <p class="card-text">A classic word-guessing game implemented in Python.
                         </p>
                       </div>
                     </div>
@@ -158,9 +158,11 @@
                     <div class="card h-100">
                       <img src="./img/request_2.jpg" class="card-img-top" alt="Request i feedback form">
                       <div class="card-body">
-                        <h5 class="card-title">Formularz zgłoszeniowy</h5>
-                        <p class="card-text">Aplikacja pozwalająca dodawać do bazy danych i wysłać mailem zgłoszenie nowego projekt a także wystawić ocenę zadowolenia po jego ukończeniu.
-                        Projekt został przygotowany w oparciu o technologie Python, Flask, HTML, CSS, Boostrap, JavaScript.
+                        <h5 class="card-title">Application Form</h5>
+                        <p class="card-text">An application that allows adding a new project to the database,
+                            sending a notification email,
+                            and also rating satisfaction upon its completion.
+                            The project has been developed using Python, Flask, HTML, CSS, Bootstrap, and JavaScript technologies.
                         </p>
                       </div>
                     </div>
@@ -169,8 +171,8 @@
                     <div class="card h-100">
                       <img src="./img/VBA.png" class="card-img-top" alt="VBA">
                         <div class="card-body">
-                        <h5 class="card-title">VBA projekty</h5>
-                        <p class="card-text">Do tej pory przygotowałem kilkadziesiąt projektów automatyzacji pracy w Excelu i Accesie.</p>
+                        <h5 class="card-title">VBA Projects</h5>
+                        <p class="card-text">So far, I have prepared dozens of automation projects in Excel and Access.</p>
                       </div>
                     </div>
                   </div>
@@ -179,27 +181,27 @@
         </section>
         <section id="contact" class="contact bg-dark text-light py-5">
             <div class="container text-center py-5">
-                <p class="display-3 pb-lg-5 text-uppercase"> Napisz do mnie </p>
+                <p class="display-3 pb-lg-5 text-uppercase"> Contact Me </p>
                 <div class="row">
                     <div class="col-lg-9 my-5 m-lg-0">
                         <form action="https://formsubmit.co/michalzolyniak@o2.pl" method="POST">
                             <div class="input-group mb-3">
-                                <input type="text" name ="name" class="form-control" placeholder="Imię Nazwisko" required>
+                                <input type="text" name ="name" class="form-control" placeholder="Name" required>
                             </div>
                             <div class="input-group mb-3">
-                                <input type="email" name="email" class="form-control" placeholder="Adres mailowy" required>
+                                <input type="email" name="email" class="form-control" placeholder="Email" required>
                             </div>
                             <div class="input-group mb-3">
-                                <textarea  name="message" rows="6" class="form-control" placeholder="Treść wiadomości" required></textarea>
+                                <textarea  name="message" rows="6" class="form-control" placeholder="Message" required></textarea>
                             </div>
-                            <input type="submit" value="Wyślij" class="btn btn btn-light px-4 py-2 submit-btn">
+                            <input type="submit" value="Send" class="btn btn btn-light px-4 py-2 submit-btn">
                             <input type="hidden" name="_subject" value="Nowy mail z michalzolyniak.pl">
-                            <input type="hidden" name="_next" value="https://michalzolyniak.pl/thank_you.html">
+                            <input type="hidden" name="_next" value="https://michalzolyniak.pl/thank_you_en.html">
                             <input type="hidden" name="_captcha" value="false">
                         </form>
                     </div>
                     <div class="col-lg-3 mt-4 m-lg-0 contact info">
-                        <h3>Kontakt:</h3>
+                        <h3>Contact:</h3>
                         <p><i class="bi bi-at orange-color"></i>michalzolyniak@o2.pl</p>
                         <br>
                         <h3>Follow me:</h3>
