change page thank you

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             </div>
                             <input type="submit" value="Wyślij" class="btn btn btn-light px-4 py-2 submit-btn">
                             <input type="hidden" name="_subject" value="Nowy mail z michalzolyniak.pl">
-                            <input type="hidden" name="_next" value="https://michalzolyniak.pl/thank_you.html">
+                            <input type="hidden" name="_next" value="https://michalzolyniak.github.io/thank_you.html">
                             <input type="hidden" name="_captcha" value="false">
                         </form>
                     </div>
