--- a/english_page.html
+++ b/english_page.html
@@ -196,7 +196,7 @@
                             </div>
                             <input type="submit" value="Send" class="btn btn btn-light px-4 py-2 submit-btn">
                             <input type="hidden" name="_subject" value="Nowy mail z michalzolyniak.pl">
-                            <input type="hidden" name="_next" value="https://michalzolyniak.pl/thank_you_en.html">
+                            <input type="hidden" name="_next" value="https://michalzolyniak.github.io/thank_you_en.html">
                             <input type="hidden" name="_captcha" value="false">
                         </form>
                     </div>
